<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequiredCourse"
    android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Required Courses"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/CS"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="243dp"
        android:background="@color/colorAccent"
        android:text="Computer Science"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="71dp" />

    <Button
        android:id="@+id/AppliedCS"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:background="@color/colorAccent"
        android:text="Applied Computer Science"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="168dp" />

    <Button
        android:id="@+id/Math"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp"
        android:background="@color/colorAccent"
        android:text="Mathmatics"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="271dp" />/>

</RelativeLayout>